# OptLab

./: .env.template  .gitignore  AGENTS.md  dependencies.py  main.py  optlab 2.db  pyproject.toml  readme.md
core/: agent.py  assistant.py  auth.py  chat_service.py  env_manager.py  note_generator.py  scheduler.py
core/agent/: agent.py
demo/: 1d_demo.html  simplex_demo.html
docs/: alembic_tutorial.md  overview.md  textgrad_training_guide.md  一维搜索优化-区间搜索-观察与探索网页设计.md  侧栏添加.md  实验笔记添加.md
docs/backend/: OPTLAB_BACKEND_HANDBOOK.md  OPTLAB_DATABASE_GUIDE.md  api_contract.snapshot.json
docs/公式/: SVM基础概念.txt  SVM核技巧.txt  二分法.txt  割线法.txt  斐波那契数列法.txt  梯度下降法.txt  牛顿法.txt  黄金分割法.txt
docs/实验指导书/: SVM-SMO-课程主页.txt  SVM-核技巧-三维可视化.txt  一维搜索方法应用实验.txt  区间收缩法-性质对比.txt  区间收缩法-流程观察.txt  单纯形法.txt  点搜索-性质对比.txt  点搜索-流程观察.txt
models/: __init__.py  chat_message.py  chat_session.py  experiment.py  experiment_record.py  note_item.py  user.py
notebook/: train.ipynb
repository/: README.md  admin_repo.py  experiment_repo.py  note_item_repo.py  user_repo.py
resources/: index.html
resources/1d_search/: index.html
resources/gd/: index.html
resources/lp/: index.html
routers/: admin.py  agent.py  auth.py  experiments.py  notes.py
schemas/: __init__.py  agent.py  chat.py  experiment.py  experiment_record.py  note_item.py  user.py
scripts/: evaluation_dataset.py  init_db.py  launch.py  launch_evaluation_workbench.py  run_lan.sh  test_prompt.py  train_prompt.py
scripts/evaluation/: default_rubric.v1.json  eval_dataset.schema.json  experiment_profiles.v1.json
settings/: __init__.py
static/css/: courses.css  index.css  style.css  sub-courses.css
static/js/: admin-env.js  admin-evaluation.js  admin-experiments.js  admin-users.js  admin.js  api.js  auth.js  home-carousel.js  main.js  profile.js  range-slider.js  settings.js
templates/: base.html  index.html  lab.html  profile.html  settings.html
templates/admin/: env.html  (+6 more)
(+150 files in other folders)
